Primer acercamiento profile

--- a/index.html
+++ b/index.html
@@ -10,16 +10,32 @@
 </head>
 
 <body>
-   <!-- Header con logo -->
   <header class="header">
-    <!-- Aquí irá el logo y navegación si aplica -->
+     <img src="../images/Around_the_US.svg" alt="Around the US" class="logo_header">
   </header>
 
   <main class="main">
     
-    <!-- Perfil del usuario -->
-    <section class="profile">
-      <!-- Avatar, nombre y botón ➕ -->
+<section class="profile">
+  <div class="profile__container">
+    
+    <div class="profile__avatar-wrapper">
+      <img src="../images/IMG_1325.jpeg" alt="Profile photo" class="profile__avatar">
+    </div>
+
+    <div class="profile__name-wrapper">
+      <h1 class="profile__name">Elizabeth Corona</h1>
+      <button class="profile__edit-button" aria-label="Edit profile"></button>
+    </div>
+
+    <p class="profile__description">Amante de los viajes</p>
+    <button class="profile__add-button" type="button">+</button>
+
+  </div>
+</section>
+
+
+
     </section>
 
     <!-- Galería de recuerdos (tarjetas) -->
