--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alrededor de los EE.UU</title>
   <link rel="stylesheet" href="vendor/normalize.css">
-  <link rel="stylesheet" href="fonts/fonts.css"> <!--es necesario o carpeta de fonts??-->
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
@@ -34,21 +33,77 @@
   </div>
 </section>
 
+<section class="memories">
+  <div class="memories__container">
+    <div class="memories__item">
+      <img src="./images/Foto_1.jpeg" alt="Foto_1" class="memories__image">
+      <div class="memories__info">
+        <h2 class="memories__title">Kinkaku-ji, Kioto</h2>
+        <div class="memories__icon"></div>
+      </div>
+    </div>
+    <div class="memories__item">
+      <img src="./images/Foto_2.JPG" alt="Foto_2" class="memories__image">
+      <div class="memories__info">
+        <h2 class="memories__title">Dōtonbori, Osaka</h2>
+        <div class="memories__icon"></div>
+      </div>
+    </div>
+    <div class="memories__item">
+      <img src="./images/Foto_3.JPG" alt="Foto_3" class="memories__image">
+      <div class="memories__info">
+        <h2 class="memories__title">Omoide Yokocho, Shinjuku</h2>
+        <div class="memories__icon"></div>
+      </div>
+    </div>
+    <div class="memories__item">
+      <img src="./images/Foto_4.jpeg" alt="Foto_4" class="memories__image">
+      <div class="memories__info">
+        <h2 class="memories__title">Tokyo Tower</h2>
+        <div class="memories__icon"></div>
+      </div>
+    </div>
+    <div class="memories__item">
+      <img src="./images/Foto_5.JPG" alt="Foto_5" class="memories__image">
+      <div class="memories__info">
+        <h2 class="memories__title">Sensō-ji, Tokio</h2>
+        <div class="memories__icon"></div>
+      </div>
+    </div>
+    <div class="memories__item">
+      <img src="./images/Foto_6.JPG" alt="Foto_6" class="memories__image">
+      <div class="memories__info">
+        <h2 class="memories__title">Kabukichō, Tokio</h2>
+        <div class="memories__icon"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+</main> <!--VA ANTES DE EMPEZAR JS, CIERTO??-->
 
 
-    </section>
+<div class="modal" id="edit-profile-modal">
+  <div class="modal__content">
+    <button class="modal__close-button" aria-label="Cerrar formulario"></button>
+    <h2 class="modal__title">Editar perfil</h2>
+    <form class="modal__form" name="edit-profile">
+      <input type="text" name="name" placeholder="Nombre" class="modal__input" required>
+      <input type="text" name="about" placeholder="Descripción" class="modal__input" required>
+      <button type="submit" class="modal__save-button">Guardar</button>
+    </form>
+  </div>
+</div>
 
-    <!-- Galería de recuerdos (tarjetas) -->
-    <section class="memories">
-      <!-- Seis tarjetas con imagen y título -->
-    </section>
 
-  </main>
 
   <!-- Footer -->
   <footer class="footer">
     <!-- Derechos de autor -->
   </footer>
-  <script src="js/main.js"></script>
+
+<script src="./index.js"></script>
+
 </body>
 </html>
+
