prueba de rama2

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="profile__name-wrapper">
       <h1 class="profile__name">Elizabeth Corona</h1>
       <button class="profile__edit-button" aria-label="Edit profile"></button>
-      <p class="profile__description">Amante de los viajes</p>
-    </div>
-
+       </div>
+<!--mobile vertical-->
+    <p class="profile__description">Amante de los viajes</p>
     <button class="profile__add-button" type="button">+</button>
 
   </div>
