--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
 <body>
   <header class="header">
-     <img src="./images/Around_Japan.svg" alt="Around Japan" class="logo_header">
-  </header>
+  <div class="header__container">
+    <img src="./images/Around_Japan.svg" alt="Around Japan" class="logo_header">
+  </div>
+  <img src="./images/Line.svg" alt="Línea divisoria" class="header__line">
+</header>
+
 
   <main class="main">
     
@@ -19,15 +23,17 @@
   <div class="profile__container">
     
     <div class="profile__avatar-wrapper">
-      <img src="../images/IMG_1325.jpeg" alt="Profile photo" class="profile__avatar">
+      <img src="./images/IMG_1325.jpeg" alt="Profile photo" class="profile__avatar">
     </div>
 
     <div class="profile__name-wrapper">
-      <h1 class="profile__name">Elizabeth Corona</h1>
-      <button class="profile__edit-button" aria-label="Edit profile"></button>
-       </div>
-<!--mobile vertical-->
-    <p class="profile__description">Amante de los viajes</p>
+      <div class="profile__title-row">
+        <h1 class="profile__name">Elizabeth Corona</h1>
+        <button class="profile__edit-button" aria-label="Edit profile"></button>
+      </div>
+      <p class="profile__description">Amante de los viajes</p>
+    </div>
+
     <button class="profile__add-button" type="button">+</button>
 
   </div>
