--- a/index.html
+++ b/index.html
@@ -26,24 +26,19 @@
       <img src="./images/IMG_1325.jpeg" alt="Profile photo" class="profile__avatar">
     </div>
 
-    <div class="profile__name-wrapper">
-<<<<<<< HEAD
+    <div class="profile__info">
       <div class="profile__title-row">
         <h1 class="profile__name">Elizabeth Corona</h1>
         <button class="profile__edit-button" aria-label="Edit profile"></button>
       </div>
       <p class="profile__description">Amante de los viajes</p>
-=======
-      <h1 class="profile__name">Elizabeth Corona</h1>
-      <button class="profile__edit-button" aria-label="Edit profile"></button>
->>>>>>> main
     </div>
-    
-    <p class="profile__description">Amante de los viajes</p>
+
     <button class="profile__add-button" type="button">+</button>
 
   </div>
 </section>
+
 
 <section class="memories">
   <div class="memories__container">
