Ajustes para entrega

--- a/index.html
+++ b/index.html
@@ -43,42 +43,42 @@
 <section class="memories">
   <div class="memories__container">
     <div class="memories__item">
-      <img src="./images/Foto_1.jpeg" alt="Foto_1" class="memories__image">
+      <img src="./images/Foto_1.jpeg" alt="Kinkaku-ji, Kioto" class="memories__image">
       <div class="memories__info">
         <h2 class="memories__title">Kinkaku-ji, Kioto</h2>
         <div class="memories__icon"></div>
       </div>
     </div>
     <div class="memories__item">
-      <img src="./images/Foto_2.JPG" alt="Foto_2" class="memories__image">
+      <img src="./images/Foto_2.JPG" alt="Dōtonbori, Osaka" class="memories__image">
       <div class="memories__info">
         <h2 class="memories__title">Dōtonbori, Osaka</h2>
         <div class="memories__icon"></div>
       </div>
     </div>
     <div class="memories__item">
-      <img src="./images/Foto_3.JPG" alt="Foto_3" class="memories__image">
+      <img src="./images/Foto_3.JPG" alt="Omoide Yokocho, Shinjuku" class="memories__image">
       <div class="memories__info">
         <h2 class="memories__title">Omoide Yokocho, Shinjuku</h2>
         <div class="memories__icon"></div>
       </div>
     </div>
     <div class="memories__item">
-      <img src="./images/Foto_4.jpeg" alt="Foto_4" class="memories__image">
+      <img src="./images/Foto_4.jpeg" alt="Tokyo Tower" class="memories__image">
       <div class="memories__info">
         <h2 class="memories__title">Tokyo Tower</h2>
         <div class="memories__icon"></div>
       </div>
     </div>
     <div class="memories__item">
-      <img src="./images/Foto_5.JPG" alt="Foto_5" class="memories__image">
+      <img src="./images/Foto_5.JPG" alt="Sensō-ji, Tokio" class="memories__image">
       <div class="memories__info">
         <h2 class="memories__title">Sensō-ji, Tokio</h2>
         <div class="memories__icon"></div>
       </div>
     </div>
     <div class="memories__item">
-      <img src="./images/Foto_6.JPG" alt="Foto_6" class="memories__image">
+      <img src="./images/Foto_6.JPG" alt="Kabukichō, Tokio" class="memories__image">
       <div class="memories__info">
         <h2 class="memories__title">Kabukichō, Tokio</h2>
         <div class="memories__icon"></div>
